# openvtc-build-pipeline

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
.scripts/: build-and-upload.sh
did-git-sign/: Cargo.toml  README.md
did-git-sign/src/: config.rs  init.rs  lib.rs  main.rs  policy.rs  sign.rs  vta.rs
did-git-sign/tests/fixtures/: mock_ssh_keygen.sh
docs/: README.md  openvtc-tool-commands.md  relationships-vrcs.md
docs/design/: README.md  multi-community-presentation.html  multi-community-support.md  t1-active-identity-api.md  tui-architecture.md  verifiable-trust-communities-presentation.html
openvtc/: Cargo.toml  README.md
openvtc-core/: Cargo.toml  README.md
openvtc-core/benches/: crypto.rs
openvtc-core/examples/: encrypt_decrypt.rs
openvtc-core/src/: bip32.rs  display.rs  errors.rs  identity.rs  join.rs  lib.rs  logs.rs  maintainers.rs  members.rs  messaging.rs  process_lock.rs  relationships.rs  tasks.rs  vrc.rs
openvtc-core/src/config/: account.rs  context_path.rs  did.rs  keys.rs  loading.rs  mod.rs  protected_config.rs  public_config.rs  saving.rs  secured_config.rs
openvtc-core/tests/: config_encryption.rs  join_lifecycle_e2e.rs  logs.rs  mediator_smoke.rs  message_types.rs  mockvta_bootstrap_e2e.rs  profile_validation.rs  relationship_e2e.rs  relationships.rs  tasks.rs  vrc.rs
openvtc-core/tests/common/: mod.rs
openvtc-service/: Cargo.toml  README.md
openvtc-service/src/: config.rs  main.rs
openvtc/src/: cli.rs  clipboard.rs  colors.rs  main.rs
openvtc/src/state_handler/: background_dispatch.rs  create_persona.rs  credential_actions.rs  didcomm.rs  dispatch_util.rs  inbox_actions.rs  join.rs  join_flow.rs  message_dispatch.rs  mod.rs  relationship_actions.rs  save_coalesce.rs  session_manager.rs  settings_actions.rs  setup_did_actions.rs  setup_did_git_sign_actions.rs  setup_token_actions.rs  setup_vta_actions.rs  setup_wizard.rs  state.rs  vic.rs
openvtc/src/state_handler/actions/: mod.rs
openvtc/src/state_handler/main_page/: content.rs  menu.rs  mod.rs
openvtc/src/state_handler/setup_sequence/: config.rs  did_keys.rs  mod.rs  openpgp_card.rs  vta.rs
openvtc/src/ui/: component.rs  mod.rs
openvtc/src/ui/pages/: mod.rs
openvtc/src/ui/pages/join_flow/: identity_choice.rs  invitation_choice.rs  join_progress.rs  mod.rs  vtc_enter_did.rs
openvtc/src/ui/pages/loading/: mod.rs
openvtc/src/ui/pages/main/: mod.rs
openvtc/src/ui/pages/main/components/: communities_panel.rs  content_panel.rs  credentials_panel.rs  inbox_panel.rs  logs_panel.rs  menu_panel.rs  mod.rs  panel.rs  relationships_panel.rs  settings_panel.rs  status.rs  vta_panel.rs
openvtc/src/ui/pages/setup_flow/: choice_page.rs  config_import.rs  did_git_sign_ask.rs  did_git_sign_setup.rs  did_keys_export_ask.rs  did_keys_export_inputs.rs  did_keys_export_show.rs  did_keys_show.rs  final_page.rs  mediator_ask.rs  mediator_custom.rs  mod.rs  navigation.rs  start_ask.rs  unlock_code_ask.rs  unlock_code_set.rs  unlock_code_warn.rs  username.rs  vta_acl_instructions.rs  vta_enter_did.rs  vta_keys_fetch.rs  vta_provisioning.rs  webvh_address.rs  webvh_server_progress.rs  webvh_server_select.rs
openvtc/src/ui/pages/setup_flow/pgp_token/: token_factory_reset.rs  token_select.rs  token_set_cardholder_name.rs  token_set_touch.rs  token_start.rs
robotic-maintainers/: Cargo.toml
robotic-maintainers/src/: main.rs
tasks/: plan.md  todo.md
