[package]
name = "did-git-sign"
description = "Git commit signing proxy using DID Ed25519 keys via VTA"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "did_git_sign"
path = "src/lib.rs"

[[bin]]
name = "did-git-sign"
path = "src/main.rs"

[dependencies]
vta-sdk = { workspace = true, features = ["client", "session"] }
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
keyring-core = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }
dirs = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = "2.2"
ssh-key = { version = "0.6", features = ["ed25519", "crypto"] }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dialoguer = { workspace = true }
sysinfo = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }

# Per-platform keyring-core stores. did-git-sign uses the same backend as
# openvtc on each platform so credentials line up.
[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { workspace = true }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
