[package]
name = "openvtc-core"
description = "OpenVTC Core Library"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true

[features]
default = ["openpgp-card"]
openpgp-card = [
  "dep:openpgp-card",
  "dep:card-backend-pcsc",
  "dep:openpgp-card-rpgp",
]
# Derives `Arbitrary` on the pure parse-surface config/message/credential
# types so the cargo-fuzz harnesses can do structure-aware fuzzing
# (issue #124). Off by default; nightly fuzz builds opt in. Pulls chrono's
# own `arbitrary` feature for the `LogMessage` timestamp.
arbitrary = ["dep:arbitrary", "chrono/arbitrary"]

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
arbitrary = { workspace = true, optional = true }
argon2.workspace = true
affinidi-tdk.workspace = true
affinidi-data-integrity.workspace = true
base64.workspace = true
bip39.workspace = true
byteorder.workspace = true
chrono.workspace = true
dirs.workspace = true
didwebvh-rs.workspace = true
dtg-credentials.workspace = true
ed25519-dalek-bip32.workspace = true
hkdf.workspace = true
hex.workspace = true
keyring-core.workspace = true
multibase.workspace = true
pgp.workspace = true
rand.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true
sha2.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
trust-tasks-rs.workspace = true
url.workspace = true
uuid.workspace = true
x25519-dalek.workspace = true
vta-sdk.workspace = true
zeroize.workspace = true

# Openpgp-Card Support
openpgp-card = { workspace = true, optional = true }
card-backend-pcsc = { workspace = true, optional = true }
openpgp-card-rpgp = { workspace = true, optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
# In-process mediator for integration tests. `memory-backend` keeps the
# whole mediator (config + queue + secrets) in RAM — no Redis sidecar,
# no on-disk fixtures — so `cargo test` stays self-contained. Slow tests
# that spawn the mediator are marked `#[ignore]`; run them with
# `cargo test -- --ignored`.
# Test-mediator fixture: spawns a real `affinidi-messaging-mediator`
# embedded in the test process with the JWT keys, DID document, ACL
# defaults, and local-DID whitelisting set up. Replaces the hand-rolled
# harness that did the same dance manually.
affinidi-messaging-test-mediator = "0.2"
affinidi-messaging-didcomm-service = { workspace = true }
# In-process MockVta for the bootstrap e2e (VTI#406/#427 test-support seams).
# `vta-service` is the VTA server crate; 0.10 carries the credential-vault
# lifecycle tasks (receive/query/archive/delete/restore/purge) + the
# `MockVta::start_provisionable` seams used by the e2e tests.
vta-service = { version = "0.10", default-features = false, features = ["test-support", "rest", "didcomm"] }
base64 = { workspace = true }
ed25519-dalek-bip32 = { workspace = true }
secrecy = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[[bench]]
name = "crypto"
harness = false
