[package]
name = "openvtc"
description = "OpenVTC CLI Tool"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true

[features]
default = ["openpgp-card"]
openpgp-card = [
  "dep:openpgp-card",
  "dep:card-backend-pcsc",
  "dep:openpgp-card-rpgp",
  "openvtc-core/openpgp-card",
]

[dependencies]
openvtc-core.workspace = true
ratatui.workspace = true

aes-gcm.workspace = true
affinidi-tdk.workspace = true
affinidi-data-integrity.workspace = true
affinidi-messaging-didcomm-service.workspace = true
anyhow.workspace = true
# did-git-sign exposes init::install so the cli2 setup wizard can configure
# git commit signing for the freshly-provisioned persona without having to
# spawn the binary or re-run a VTA bootstrap.
did-git-sign = { path = "../did-git-sign", version = "0.1" }
base64.workspace = true
byteorder.workspace = true
chrono.workspace = true
clap.workspace = true
# cli-clipboard.workspace = true
arboard.workspace = true
console.workspace = true
crossterm.workspace = true
dirs.workspace = true
dialoguer.workspace = true
didwebvh-rs.workspace = true
dtg-credentials.workspace = true
ed25519-dalek-bip32.workspace = true
hex.workspace = true
keyring-core.workspace = true
multibase.workspace = true
pgp.workspace = true
rand.workspace = true
regex.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true
sha2.workspace = true
strum.workspace = true
strum_macros.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tui-input.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
x25519-dalek.workspace = true
vta-sdk.workspace = true
zeroize.workspace = true

# Openpgp-Card Support
openpgp-card = { workspace = true, optional = true }
card-backend-pcsc = { workspace = true, optional = true }
openpgp-card-rpgp = { workspace = true, optional = true }

# Per-platform keyring-core stores. Each binary registers exactly one of
# these as the default store at startup; openvtc-core only uses the
# keyring-core Entry API and doesn't pin a backend.
[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store.workspace = true

[[bin]]
name = "openvtc"
path = "src/main.rs"
